--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="page1">
       <div class="page1-content">
         <div class="title">tokenize yourself</div>
-        <form action="" method="post">
+        <form>
           <p>full name</p>
           <input type="text" id="name" required />
           <p>age</p>
