--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
       <div class="" id="section2"></div>
     </section>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
