--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     </section>
 
     <script type="module" src="/main.js"></script>
+    <script>console.log("welcome to tokenman mishra")</script>
   </body>
 </html>
