--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="" id="section2"></div>
     </section>
 
-    <script type="module" src="/main.js"></script>
+    <script  src="main.js"></script>
     <script>console.log("welcome to tokenman mishra")</script>
   </body>
 </html>
