--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function add() {
         alert("fill this form")
     }
     else {
-        /*var token = sha256(JSON.stringify(elc) + JSON.stringify(ela) + JSON.stringify(elb)).toString();*/\
+        /*var token = sha256(JSON.stringify(elc) + JSON.stringify(ela) + JSON.stringify(elb)).toString();*/
         var token= "kuch nhi h";
         var task = new Profile(elc, ela, elb, token);
         if (task) {
