--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="" id="section2"></div>
     </section>
 
-    <script  src="main.js"></script>
+    <script></script>
     <script>console.log("welcome to tokenman mishra")
        /*import './style.css' 
 import sha256 from 'crypto-js/sha256';*/
