--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <script></script>
     <script>console.log("welcome to tokenman mishra")
-       /*import './style.css' 
-import sha256 from 'crypto-js/sha256';*/
+       /*import './style.css'*/ 
+import sha256 from 'node_modules\crypto-js\sha256.js';
 
 
 const section = document.querySelectorAll('section');
@@ -76,8 +76,8 @@ function add() {
         alert("fill this form")
     }
     else {
-        /*var token = sha256(JSON.stringify(elc) + JSON.stringify(ela) + JSON.stringify(elb)).toString();*/
-        var token= "kuch nhi h";
+        var token = sha256(JSON.stringify(elc) + JSON.stringify(ela) + JSON.stringify(elb)).toString();
+        
         var task = new Profile(elc, ela, elb, token);
         if (task) {
             tasks.push(task);
