--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
     <script></script>
-    <script>console.log("welcome to tokenman mishra")
+    <script type="module">console.log("welcome to tokenman mishra")
        /*import './style.css'*/ 
 import sha256 from 'node_modules\crypto-js\sha256.js';
 
