--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script></script>
     <script type="module">console.log("welcome to tokenman mishra")
        /*import './style.css'*/ 
-import sha256 from 'node_modules\crypto-js\sha256.js';
+import sha256 from '/node_modules/crypto-js/sha256.js';
 
 
 const section = document.querySelectorAll('section');
