--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
       <div class="" id="section2"></div>
     </section>
 
-    <script></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.js" integrity="sha512-8WAv/Z7UaDv0U1DCJ3W1oul76HOvq2/9mc+IbOZGsTj9iwZnnCXL/0FS6GQKNR++krdfVn9kuAAQ6v2DqZ9uEQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module">console.log("welcome to tokenman mishra")
-       /*import './style.css'*/ 
-/*import sha256 from '/node_modules/crypto-js/sha256.js';*/
+  
 
 
 const section = document.querySelectorAll('section');
